# coachctl

./: .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  NEXT_STEPS.md  README.md  development.md  opencode.json.example  pyproject.toml  swarmvault.config.json  swarmvault.schema.md
.claude/hooks/: swarmvault-graph-first.js
.codex/: hooks.json
.opencode/agents/: coach.md
config/: athlete.yaml.template
docker/signal-cli/: docker-compose.yml
docs/: daily-coach-brief-plan.md
raw/sources/: alpenbrevet-race-reference-e582446a.md  athlete-tools-c968b16f.py  candidates-5bcf0e57.md  carbohydrate-supplementation-for-elite-long-distance-endurance-paper-catalogue-b895ddce.md  coachctl-architecture-conventions-8a2f1253.md  coachctl-strava-training-agent-7a3ae9ac.md  config-ed62725e.py  cycling-training-science-reference-aa12e3c8.md  fixtures-289681c2.py  (+31 more)
state/: benchmark.json  code-index.json  compile-state.json  graph.json
tests/: conftest.py  test_apply_plan.py  test_config.py  test_dashboard.py  test_db.py  test_events.py  test_general_wiki.py  test_metrics.py  test_metrics_extended.py  test_paths.py  test_plan_compliance.py  test_plan_event_tss.py  test_plan_expander.py  test_plan_parser.py  test_sandbox.py  test_signal_bot.py  test_site.py  test_tools_functional.py  test_tools_smoke.py  test_weight_log.py  test_wiki.py  test_workout_apply.py  test_workout_archetypes.py  test_workout_generators.py  test_workout_preview.py  test_workouts.py
wiki/: gear.md  index.md  injury_prevention.md  log.md  nutrition.md  running.md  strength.md  training_principles.md
(+1322 files in other folders)
