[project]
name = "coachctl"
version = "0.1.0"
description = "coachctl — endurance training coach (MCP server + dashboard)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
coachctl = "coachctl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coachctl"]

[tool.hatch.build.targets.wheel.force-include]
"src/coachctl/dashboard/app.html" = "coachctl/dashboard/app.html"

[tool.ruff]
line-length = 100
target-version = "py311"
