[project]
name = "coachctl"
version = "0.1.0"
description = "coachctl — endurance training coach (MCP server + dashboard)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.package-data]
"coachctl.dashboard" = ["app.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"
